--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>me.djin</groupId>
 	<artifactId>weixin</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-B1</version>
 	<packaging>jar</packaging>
 
 	<name>weixin</name>
